--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
                 <a href="celulares.html">Celulares</a>
                 <a href="informatica.html">Infomática</a>
                 <a href="eletronicos.html">Eletrônicos</a>
+                <a href="sign-in-up.html">Entrar / Cadastre-se</a>
             </div>
         </div>
         <div id="area-principal">
@@ -56,7 +57,6 @@
                         <br>
                         <div id="conteudo-lateral">
                             <h3>Categorias</h3>
-                            <a href="index.html">Inicio</a><br>
                             <a href="jogos.html">Jogos</a><br>
                             <a href="celulares.html">Celulares</a><br>
                             <a href="informatica.html">Infomática</a><br>
